--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -35,3 +35,15 @@ $button-padding: 20px;
   padding: 5px;
   font-size: 0.875rem;
 }
+
+%planning-ico {
+  display: inline-block;
+  overflow: hidden;
+  width: 15px;
+  height: 25px;
+  font-size: 0;
+  line-height: 0;
+  background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png)
+    no-repeat;
+  text-indent: -9999px;
+}
