--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -33,3 +33,9 @@ $border-style: 1px solid #e4e2e2;
   display: flex;
   align-items: center;
 }
+
+%flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
