--- a/packages/web/src/sass/icon.scss
+++ b/packages/web/src/sass/icon.scss
@@ -66,3 +66,11 @@
   width: 31px;
   background-position: 0 -850px;
 }
+.ico_heart {
+  position: static;
+  display: inline-block;
+  min-width: 18px;
+  height: 15px;
+  margin: 5px 4px 0 0;
+  background-position: -70px -60px;
+}
