--- a/packages/web/src/styles/app.css
+++ b/packages/web/src/styles/app.css
@@ -183,6 +183,15 @@ a {
   background-position: 0 -850px;
 }
 
+.ico_heart {
+  position: static;
+  display: inline-block;
+  min-width: 18px;
+  height: 15px;
+  margin: 5px 4px 0 0;
+  background-position: -70px -60px;
+}
+
 #kakaoHead {
   padding-top: 43px;
   font-family: Apple SD Gothic Neo, Malgun Gothic, 맑은 고딕, Dotum, 돋움, sans-serif;
@@ -348,12 +357,67 @@ a {
   text-align: left;
   position: relative;
 }
+.wrap_shwgnb .list_usergnb .area_rcntproducts {
+  position: relative;
+}
 .wrap_shwgnb .list_usergnb .area_rcntproducts > a {
   display: block;
   width: 122px;
   height: 54px;
   padding: 0 16px 0 34px;
   position: relative;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts {
+  display: none;
+  position: absolute;
+  right: 2px;
+  top: 54px;
+  z-index: 10;
+  padding: 0 28px;
+  border: 1px solid #979797;
+  background-color: #fff;
+  text-align: left;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab {
+  overflow: hidden;
+  padding: 26px 0 17px;
+  display: flex;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab li:nth-child(2) {
+  margin-left: 38px;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab li > a {
+  display: flex;
+  height: 26px;
+  font-size: 14px;
+  color: #444;
+  box-sizing: border-box;
+  letter-spacing: -0.05em;
+  line-height: 1.5;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab li > a .txt_tab {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab li > a .txt_tab .num_products {
+  margin-left: 3px;
+  font-weight: 700;
+  font-size: 16px;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .list_tab .on .txt_tab {
+  border-bottom: 2px solid #4a4a4a;
+  font-weight: 700;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .box_pannel .list_rcntproducts {
+  overflow: hidden;
+  width: 363px;
+  height: 363px;
+}
+.wrap_shwgnb .list_usergnb .wrap_rcntproducts .box_pannel .info_login {
+  overflow: hidden;
+  height: 46px;
+  padding: 37px 0 23px;
 }
 
 #kakaoMain {
