--- a/packages/web/src/styles/icon.css
+++ b/packages/web/src/styles/icon.css
@@ -73,4 +73,13 @@
   background-position: 0 -850px;
 }
 
+.ico_heart {
+  position: static;
+  display: inline-block;
+  min-width: 18px;
+  height: 15px;
+  margin: 5px 4px 0 0;
+  background-position: -70px -60px;
+}
+
 /*# sourceMappingURL=icon.css.map */
