style: modal z-index 추가

--- a/client/src/components/header/recently-viewed-thing/index.scss
+++ b/client/src/components/header/recently-viewed-thing/index.scss
@@ -22,7 +22,7 @@
   display: none;
   flex-direction: column;
   background-color: white;
-
+  z-index: 1;
   .modal-title {
     font-size: 0.9rem;
   }
