feat. slider indicator 랜더링 애니메이션 추가

--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -83,12 +83,11 @@
         background-color: #cccccc;
         transition: background-color 100ms ease-out;
       }
+    }
 
-      .--selected,
-      &:hover {
-        span {
-          background-color: black;
-        }
+    .slider__paging--selected {
+      span {
+        background-color: black;
       }
     }
   }
