--- a/client/src/pages/main/index.scss
+++ b/client/src/pages/main/index.scss
@@ -5,6 +5,7 @@
   background-color: #f5f5f5;
   width: 100vw;
   height: 2000px;
+  margin-top: 200px;
   border: 1px solid var(--color-grey3);
 
   .promotion {
