--- a/client/src/components/common/item-frame/index.scss
+++ b/client/src/components/common/item-frame/index.scss
@@ -2,3 +2,14 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.banner-container {
+  width: 50%;
+  border-right: 1px solid #f1f1f1;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.banner-image {
+  width: 100%;
+  cursor: pointer;
+}
