캐러셀을 위한  슬라이드 추가

--- a/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
+++ b/ethan.sglee/shoppingHow/public/stylesheets/sass/app.scss
@@ -130,12 +130,23 @@
 
             .planning {
                 width: 790px;
+                overflow: hidden;
 
                 .planning__link {
-                    display: block;
+                    display: inline-block;
                     margin: 0 auto;
                     width: 600px;
 
+                }
+
+                .prev {
+
+                }
+                .current {
+
+                }
+                .next {
+                    
                 }
             }
         }
