--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -89,6 +89,15 @@
           <a href="#" target="_blank" class="planning__link"><img
               src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct" width="485"
               height="340" class="img_g" alt=""></a>
+          <a href="#" target="_blank" class="planning__link"><img
+            src="//shop3.daumcdn.net/shophow/sib/0_211220170158_owNwlIYMPjCOmpLzLBZpBGQkATLoNNWG" width="485"
+            height="340" class="img_g" alt=""></a>
+          <a href="#" target="_blank" class="planning__link"><img
+            src="//shop3.daumcdn.net/shophow/sib/0_211220170214_KnBppOYCunaKIzTENvoRdzZivpnaGYdc" width="485"
+            height="340" class="img_g" alt=""></a>
+          <a href="#" target="_blank" class="planning__link"><img
+            src="//shop2.daumcdn.net/shophow/sib/0_211220170154_lPdfLnRSayayFBdHisdeeCypQQWWgaeu" width="485"
+            height="340" class="img_g" alt=""></a>
           <button class="planning__left-btn"></button>
           <button class="planning__right-btn"></button>
           <div class="planning__paging">
