--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -1,20 +1,18 @@
-* {
-    font-family: 돋움,dotum,sans-serif;
-    //outline:1px solid gray; //for debugging
-  }
-
-body {
-  margin: 0px auto;
-}
-
-h1 {
-  font-size: 2rem;
-}
-
-$primaryColor: #eeffcc;
 $bgColor : #f5f5f5;
+$primaryColor: #eeffcc;
 
-$button-padding: 20px;
+%section-layout {
+  width: 1270px;
+  margin: auto;
+  background: #fff;
+}
+
+%text-block {
+  display: block;
+  padding: 5px;
+  font-size: 0.875rem;
+}
+
 %border-basic {
     border: 1px solid #e4e2e2;
 }
