--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 
     form {
       display: flex;
+      overflow: hidden;
 
       .search__input {
         width: 400px;
@@ -32,17 +33,44 @@
       }
     }
 
-    .search-top10 {
+    .search__box {
       position: absolute;
-      transform: translateY(50%);
-      left: 10px;
-      font-size: 1.2rem;
-      height: 50%;
       overflow: hidden;
-      .search-top10__item {
-        display: flex;
-        align-items: center;
-        padding: 6px;
+      line-height: 60px;
+      z-index: -1;
+      width: 100%;
+
+      .search-top10 {
+        padding-left: 5px;
+        font-size: 1.2rem;
+        line-height: 60px;
+        height: 60px;
+        width: 100%;
+
+        .search-top10__item {
+          position: absolute;
+          width: 300px;
+          height: 60px;
+          transition: transform 1s;
+          display: none;
+        }
+
+        .previous-top-item {
+          transform: translateY(-60px);
+          display: block;
+        }
+
+        .current-top-item {
+          transform: translateY(0px);
+          display: flex;
+          align-items: center;
+        }
+
+        .next-top-item {
+          transform: translateY(60px);
+          display: flex;
+          align-items: center;
+        }
       }
     }
   }
@@ -78,9 +106,32 @@
   .private-menu {
     margin-left: auto;
     display: flex;
+    position: relative;
+    cursor: pointer;
 
     .private-menu__btn {
       padding: $button-padding;
+    }
+
+    #recent-product-container {
+      display: none;
+      position: absolute;
+      top: 58px;
+      right: 0px;
+      background-color: white;
+      width: 421px;
+      height: 540px;
+      z-index: 20;
+      border: 1px solid #979797;
+      padding: 0 28px;
+
+      .recent-product-menu {
+        display: flex;
+        padding: 26px 0 17px;
+        div + div {
+          margin-left: 38px;
+        }
+      }
     }
   }
 }
@@ -117,11 +168,78 @@
 
       .planning {
         width: 790px;
-
-        .planning__link {
-          display: block;
+        // display: flex;
+        position: relative;
+        .planning__lists__container {
+          overflow: hidden;
+          height: 340px;
+          width: 480px;
+          position: relative;
           margin: 0 auto;
-          width: 600px;
+          .planning__lists {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            .planning__link {
+              position: absolute;
+              display: none;
+              margin: 0 auto;
+              width: 480px;
+              // transition: transform 0.3s;
+            }
+            .prev-item {
+              transform: translateX(-480px);
+              display: block;
+            }
+            .cur-item {
+              transform: translateX(0);
+              display: block;
+            }
+            .next-item {
+              transform: translate(480px);
+              display: block;
+            }
+          }
+        }
+
+        .planning__btn {
+          position: absolute;
+          top: calc(50% - 54px);
+          width: 145px;
+          text-align: center;
+          font-size: 90px;
+          color: #f5f5f5;
+          cursor: pointer;
+          &:hover {
+            color: rgb(121, 113, 113);
+          }
+        }
+        .planning__right-btn {
+          right: 0;
+        }
+        .planning__pages {
+          position: absolute;
+          bottom: 30px;
+          left: 50%;
+          margin-left: 3px;
+          padding: 5px 0;
+          display: flex;
+          justify-content: center;
+          z-index: 10;
+
+          .planning__page {
+            display: block;
+            width: 20px;
+            height: 5px;
+            background-color: #ccc;
+            margin-right: 3px;
+            &:hover {
+              background-color: rgb(121, 113, 113);
+            }
+          }
+          .cur-page {
+            background-color: rgb(121, 113, 113);
+          }
         }
       }
     }
