fix: 2차 PR 후 피드백 반영 및 파일구조 리팩토링

--- a/src/sass/_carousel.scss
+++ b/src/sass/_carousel.scss
@@ -37,3 +37,27 @@
         }
     }
 }
+
+.hover-buttons__container {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    button {
+        cursor: pointer;
+        width: 41px;
+        height: 41px;
+        z-index: 1;
+        color: rgba(0, 0, 0, 0);
+        .hover-buttons__arrow {
+            text-align: center;
+            font-size: 41px;
+        }
+    }
+
+    button:hover {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+}
