--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -79,16 +79,38 @@
 .top10modal {
   position: absolute;
   width: 100%;
-  height: 100%;
   top: 64px;
-  padding: 1rem;
+  padding: 1.5rem;
   border: 1px solid $red-300;
   border-radius: 8px;
   background-color: white;
+  z-index: 100;
 
   visibility: hidden;
   opacity: 0;
-  transition: opacity 100ms ease-out;
+  transition: opacity 400ms ease-out;
+
+  .top10modal__title {
+    display: block;
+    color: #939393;
+    font-weight: 700;
+  }
+
+  .top10modal__keywrodList {
+    margin-top: 0.75rem;
+    float: left;
+    width: 50%;
+
+    & > li {
+      margin-top: 0.5rem;
+    }
+
+    .top10modal__rank {
+      margin-right: 10px;
+      font-weight: 700;
+      font-style: italic;
+    }
+  }
 }
 .top10modal--show {
   visibility: inherit;
