feat. 최근본 상품 마크업

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -122,9 +122,9 @@
 }
 
 .header__navContent {
+  @include flex;
   width: 1270px;
   margin: 0px auto;
-  @include flex;
 
   .category {
     cursor: pointer;
@@ -156,11 +156,11 @@
     }
   }
 
-  .private-menu {
+  .privateMenu {
     margin-left: auto;
     display: flex;
 
-    .private-menu__btn {
+    & > li {
       padding: $btn-padding;
     }
   }
